test/files/neg/t7602.check
t7602.scala:16: error: method foo is defined twice;
  the conflicting method foo was defined at line 15:7
  def foo : Device
      ^
one error found
